--- a/index.html
+++ b/index.html
@@ -142,6 +142,26 @@
                     <h3>[Add-On] [Mid-Level]</h3>
                 </div>
             </div>
+            <div class="card">
+                <div class="info">
+                    <i class='bx bx-code-alt'></i>
+                    <h1>HTML</h1>
+                    <p>
+                        HTML is a language used for creating websites. It is used by almost EVERY website one sees, and coding in it is a nice skill to have.
+                        This pairs well with CSS, which can be used for styling a website.
+                    <h3>[Paired with CSS] [High-Level]</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="info">
+                    <i class='bx bx-code-alt'></i>
+                    <h1>CSS</h1>
+                    <p>
+                        CSS is a language used for styling websites. It is also used by almost EVERY website one sees, and coding in it is a nice skill to have.
+                        This pairs with HTML, which can be used for actually creating a website.
+                    <h3>[Paired with HTML] [Mid-Level]</h3>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -177,9 +197,71 @@
                     <h3>[SQL] [C#]</h3>
                 </div>
             </div>
+            <div class="card">
+                <div class="info">
+                    <h1>Sandbox Platformer</h1>
+                    <p>
+                        This is a parkour game which has a built-in editor, allowing a user to build their own levels with ease.
+                        It has many capabilities, including a coding software for customised use.
+                    <h3>[C#] [JavaScript]</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="info">
+                    <h1>Classic Arcade</h1>
+                    <p>
+                        This is a collection of over 20 classic games placed into one program.
+                        It was fun to play with a friend who tested it!
+                    <h3>[C#] [JSON]</h3>
+                </div>
+            </div>
         </div>
     </section>
 
+    <section id="features">
+        <div class="header">
+            <h1>An Upcoming Developer's Roadmap</h1>
+        </div>
+        <div class="feature-cards">
+            <div class="card">
+                <div class="info">
+                    <h1>Lua(u)</h1>
+                    <p>
+                        First, a developer needs to learn logic and the basic principles of code.
+                        Lua's simplicity and easy-to-use nature, alongside its professionalism, makes it a perfect language to learn first.
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="info">
+                    <h1>Python / JavaScript</h1>
+                    <p>
+                        Python is the main start of a career.
+                        It is used by many big corporations and allows a user to make games and applications.
+                        Although not the fastest, it is a great language to start getting serious.
+                        JavaScript is an alternative, as it is also really good, but is a bit harder.
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="info">
+                    <h1>C# / Any High-Level Language</h1>
+                    <p>
+                        C# is an example of a high-level language.
+                        When getting really good, a programmer should switch to one of these to learn.
+                        It has many more capabilities and is more impressive.
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="info">
+                    <h1>SQL + JSON</h1>
+                    <p>
+                        Not necessarily the last, but a developer should eventually learn these in addition to their main language.
+                        SQL and JSON allow for APIs and server work, as well as storing data.
+                    </p>
+                </div>
+            </div>
 
     <button class="scroll-top" onclick="scrollToTop()">
         <i class='bx bxs-up-arrow'></i>
