fixed some titles
sigma

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="particles"></div>
         <div class="info-text">
             <h1>quak++</h1>
-            <h3>Coder in many languages, allowing me to tutor others!</h3>
+            <h3>Coder in many languages, and able to teach at any level!</h3>
             <a href="#about" class="scroll"><i class='bx bxs-down-arrow'></i></a>
         </div>
     </header>
