--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <i class='bx bxs-devices'></i>
                     <h1>Effective Learning</h1>
                     <p>
-                        I can teach people well and have already began teaching a few people on how to code!
+                        I can teach people effectively and have already began teaching a few people how to code!
                         I teach people in a structured manner and provide exercises when needed.
                     </p>
                 </div>
@@ -58,7 +58,7 @@
 
                     <h1>Creative Projects</h1>
                     <p>
-                        Behind the scenes, I pride myself on writing clean, efficient, and maintainable code. I have made many projects which include games, server management and algorithms.
+                        Behind the scenes, I pride myself on writing clean, efficient, and maintainable code. I have developed many projects which include games, server management and algorithms.
                     </p>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                     <i class='bx bxs-component'></i>
                     <h1>Code Quality</h1>
                     <p>
-                        I can both teach and code well. I can also code cleanly, allowing others to learn aswell. This is a very important skill as it allows programmers to work well and efficiently.
+                        I can both teach and code well. I can also code cleanly, allowing others to learn easily. This is a very important skill as it allows programmers to work well and efficiently.
                     </p>
                 </div>
             </div>
@@ -84,8 +84,8 @@
                     <i class='bx bx-code-alt'></i>
                     <h1>Python</h1>
                     <p>
-                        I know every nook and cranny of python, as I have been studying it for a few years. It is my second most used programming language, and is crucial for both learning higher level languages and learning to be logical with code.
-                        It is used my companies like Intel, Spotify, Facebook, JP Morgan Chase and Netflix.
+                        I know every nook and cranny of python as I have been studying it for years. It is my second most used programming language, and is crucial for both learning higher level languages and learning to be logical with code.
+                        It is used by many companies like Intel, Spotify, Facebook, JP Morgan Chase and Netflix.
                     </p>
                     <h3>[Standalone] [Low-Level]</h3>
                 </div>
@@ -95,7 +95,7 @@
                     <i class='bx bx-code-alt'></i>
                     <h1>JavaScript</h1>
                     <p>
-                        I started learning JavaScript in a school-sanctioned coding club and from then began to learn more and more. I can code in this quite well now, and have taught someone this language before.
+                        I started learning JavaScript in a school-sanctioned coding club and from then began to learn more and more. I can code in this language well and have taught someone this language before.
                     </p>
                     <h3>[Standalone] [Mid-Level]</h3>
                 </div>
@@ -105,8 +105,8 @@
                     <i class='bx bx-code-alt'></i>
                     <h1>Lua(u)</h1>
                     <p>
-                        Lua is an easy to learn language, as it is close to english.
-                        It does, however, have limited uses, particularly special for 'Roblox' games.
+                        Lua is an easy to learn language as it is similar to reading English.
+                        It does, however, have limited uses, particularly use in 'Roblox' games.
                         Lua has an alternative which is more specific for 'Roblox' called Luau, which I can also teach.
                     </p>
                     <h3>[Standalone] [Low-Level]</h3>
@@ -147,7 +147,7 @@
                     <i class='bx bx-code-alt'></i>
                     <h1>HTML</h1>
                     <p>
-                        HTML is a language used for creating websites. It is used by almost EVERY website one sees, and coding in it is a nice skill to have.
+                        HTML is a language used for creating websites. It is used by almost EVERY website one sees, and being able to code in it is a nice skill to have.
                         This pairs well with CSS, which can be used for styling a website.
                     <h3>[Paired with CSS] [High-Level]</h3>
                 </div>
@@ -157,7 +157,7 @@
                     <i class='bx bx-code-alt'></i>
                     <h1>CSS</h1>
                     <p>
-                        CSS is a language used for styling websites. It is also used by almost EVERY website one sees, and coding in it is a nice skill to have.
+                        CSS is a language used for styling websites. It is also used by almost EVERY website one sees, and being able to code in it is a desirable skill to have.
                         This pairs with HTML, which can be used for actually creating a website.
                     <h3>[Paired with HTML] [Mid-Level]</h3>
                 </div>
@@ -248,7 +248,7 @@
                     <h1>C# / Any High-Level Language</h1>
                     <p>
                         C# is an example of a high-level language.
-                        When getting really good, a programmer should switch to one of these to learn.
+                        When getting really good, a programmer should switch to learning one of these.
                         It has many more capabilities and is more impressive.
                     </p>
                 </div>
